fixed font color contrast for accessibility

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -52,7 +52,7 @@ body, html {
     margin:0;
     font:300 18px/1.5 Roboto, "Helvetica Neue", Arial, sans-serif;
     background:#fff;
-    color:#818181;
+    color:#595959;
 }
 
 body {
